--- a/index.html
+++ b/index.html
@@ -394,9 +394,8 @@
 	  }
 	}
 
-	normalize (s) {
-	  if (!s) {s = 1;}
-	  return this.mult(1/this.mag()).mult(s)
+	setMagnitude (scale=1) {
+	  return this.scale(1/this.getMagnitude()).scale(scale)
 	}
 
 	transform (matrix) {
@@ -770,6 +769,7 @@
       const MARKS_DATA = 'MARKS_DATA' // String
       const SAVED_MARKS_DATA = 'SAVED_MARKS_DATA' // Object: { <name>: <dataURI> }
       const SAVE_PROMPT_ACTIVE = 'SAVE_PROMPT_ACTIVE' // Boolean
+      const MARKS_HISTORY_LENGTH = 'MARKS_HISTORY_LENGTH'
 
       const NONE = 'NONE'
       const VANISHING = 'VANISHING'
@@ -918,7 +918,9 @@
 	    wState[PRINT_HEAD_LOCATION].setCoordinates(constraints[constraint](toolLocation).x, constraints[constraint](toolLocation).y)
 	  }
 	},
-	mouseUp: (toolLocation) => {}
+	mouseUp: (toolLocation) => {
+	  updateMarksHistory()
+	}
       }
 
       tools[COMMITTED] = {
@@ -955,7 +957,9 @@
 	    wState[PRINT_HEAD_LOCATION].setCoordinates(constraints[PARALLEL](toolLocation).x, constraints[PARALLEL](toolLocation).y)
 	  }
 	},
-	mouseUp: (toolLocation) => {}
+	mouseUp: (toolLocation) => {
+	  updateMarksHistory()
+	}
       }
 
       tools[ELLIPSE] = {
@@ -1014,6 +1018,7 @@
 	      layers[MARKS].stroke()
 	    }
 	  }
+	  updateMarksHistory()
 	}
       }
 
@@ -1060,42 +1065,74 @@
 	      layers[MARKS].strokeRect(...rectangle)
 	    }
 	  }
+	  updateMarksHistory()
 	}
       }
       tools[LINE] = {
 	mouseDown: (toolLocation) => {
-	  drawLine(
-	    TOOLS,
-	    wState[MOUSE_DOWN_LOCATION],
-	    toolLocation,
-	    wState[TOOLS_COLOR],
-	    wState[BRUSHES][wState[BRUSH]].width
-	  )
-	},
-	mouseMove: (toolLocation) => {
-	  if (mouseIsDown && constraints[constraint](toolLocation)) {
-	    layers[TOOLS].innerHTML = ''
+	  if (wState[FILL_ACTIVE]) {
+	    drawArrow(
+	      TOOLS,
+	      wState[MOUSE_DOWN_LOCATION],
+	      toolLocation,
+	      wState[TOOLS_COLOR],
+	      wState[BRUSHES][wState[BRUSH]].width
+	    )
+	  } else {
 	    drawLine(
 	      TOOLS,
 	      wState[MOUSE_DOWN_LOCATION],
-	      constraints[constraint](toolLocation),
+	      toolLocation,
 	      wState[TOOLS_COLOR],
 	      wState[BRUSHES][wState[BRUSH]].width
 	    )
 	  }
 	},
+	mouseMove: (toolLocation) => {
+	  if (mouseIsDown && constraints[constraint](toolLocation)) {
+	    layers[TOOLS].innerHTML = ''
+	    if (wState[FILL_ACTIVE]) {
+	      drawArrow(
+		TOOLS,
+		wState[MOUSE_DOWN_LOCATION],
+		constraints[constraint](toolLocation),
+		wState[TOOLS_COLOR],
+		wState[BRUSHES][wState[BRUSH]].width
+	      )
+	    } else { 
+	      drawLine(
+		TOOLS,
+		wState[MOUSE_DOWN_LOCATION],
+		constraints[constraint](toolLocation),
+		wState[TOOLS_COLOR],
+		wState[BRUSHES][wState[BRUSH]].width
+	      )
+	    }
+	  }
+	},
 	mouseUp: (toolLocation) => {
 	  if (constraints[constraint](toolLocation)) {
 	    layers[TOOLS].innerHTML = ''
-	    drawLine(
-	      MARKS,
-	      wState[MOUSE_DOWN_LOCATION],
-	      constraints[constraint](toolLocation),
-	      wState[BRUSHES][wState[BRUSH]].color,
-	      wState[BRUSHES][wState[BRUSH]].width
-	    )
+	    if (wState[FILL_ACTIVE]) {
+	      drawArrow(
+		MARKS,
+		wState[MOUSE_DOWN_LOCATION],
+		constraints[constraint](toolLocation),
+		wState[BRUSHES][wState[BRUSH]].color,
+		wState[BRUSHES][wState[BRUSH]].width
+	      )
+	    } else {
+	      drawLine(
+		MARKS,
+		wState[MOUSE_DOWN_LOCATION],
+		constraints[constraint](toolLocation),
+		wState[BRUSHES][wState[BRUSH]].color,
+		wState[BRUSHES][wState[BRUSH]].width
+	      )
+	    }
 	    setWhiteboardState(ANGLE, constraints[constraint](toolLocation).getAngle(wState[MOUSE_DOWN_LOCATION]))
 	  }
+	  updateMarksHistory()
 	}
       }
 
@@ -1538,6 +1575,17 @@
       defaultState[MARKS_DATA] = 'untitled'
       defaultState[SAVED_MARKS_DATA] = {}
       defaultState[SAVE_PROMPT_ACTIVE] = true
+      defaultState[MARKS_HISTORY_LENGTH] = 50
+
+      const updateMarksHistory = (dataURL=dom[MARKS].toDataURL('image/png')) => {
+	if (marksHistory.length < wState[MARKS_HISTORY_LENGTH]) {
+	  historyIndex += 1
+	} else {
+	  marksHistory.shift()
+	}
+	marksHistory = marksHistory.slice(0, historyIndex)
+	marksHistory.push(dataURL)
+      }
       
       // Prepare Objects for Grid
       const drawLine = function(layer, fv, tv, color, width) {
@@ -1551,12 +1599,48 @@
 	  line.setAttribute('stroke-width', width || wState[`${layer}_WIDTH`])
 	  layers[layer].appendChild(line)
 	} else { // draw line on canvas
+	  if (color === undefined) {
+	    color = wState[BRUSHES][wState[BRUSH]].color.getRgba()
+	  }
+	  layers[layer].strokeStyle = color.getRgba()
+	  layers[layer].lineWidth = width
 	  layers[layer].beginPath()
 	  layers[layer].moveTo(fv.x, fv.y)
 	  layers[layer].lineTo(tv.x, tv.y)
-	  layers[layer].strokeStyle = color ? color.getRgba() : wState[`${layer}_COLOR`].getRgba()
 	  layers[layer].stroke()
+	  layers[layer].strokeStyle = wState[BRUSHES][wState[BRUSH]].color.getRgba()
+	  layers[layer].lineWidth = wState[BRUSHES][wState[BRUSH]].width
 	}
+      }
+
+      const drawArrow = function (layer, fv, tv, color, width=2) {
+	const angle = tv.getAngle(fv)
+	const leftBarb = new Vector2({ angle: Math.atan(1 / 3) + angle + Math.PI, magnitude: width * Math.sqrt(20) }).add(tv)
+	const rightBarb = new Vector2({ angle: Math.atan(-1 / 3) + angle + Math.PI, magnitude: width * Math.sqrt(20) }).add(tv)
+	const base = new Vector2({ angle: angle + Math.PI, magnitude: width * 3 }).add(tv)
+	if (layers[layer].nodeName === 'svg') {
+	  const polygon = document.createElementNS(svgNameSpace, 'polygon')
+	  polygon.setAttribute('points', `${tv.x},${tv.y} ${leftBarb.x},${leftBarb.y} ${base.x},${base.y} ${rightBarb.x},${rightBarb.y}`)
+	  polygon.setAttribute('fill', color ? color.getRgba() : wState[`${layer}_COLOR`].getRgba())
+	  polygon.setAttribute('stroke', color ? color.getRgba() : wState[`${layer}_COLOR`].getRgba())
+	  polygon.setAttribute('stroke-width', 0)
+	  layers[layer].appendChild(polygon)
+	} else { // draw line on canvas
+	  if (color === undefined) {
+	    color = wState[BRUSHES][wState[BRUSH]].color.getRgba()
+	  }
+	  layers[layer].fillStyle = color.getRgba()
+	  layers[layer].beginPath()
+	  layers[layer].moveTo(tv.x, tv.y)
+	  layers[layer].lineTo(leftBarb.x, leftBarb.y)
+	  layers[layer].lineTo(base.x, base.y)
+	  layers[layer].lineTo(rightBarb.x, rightBarb.y)
+	  layers[layer].closePath()
+	  layers[layer].fill()
+	  layers[layer].fillStyle = wState[BRUSHES][wState[BRUSH]].color.getRgba()
+	}
+	console.log('color: ', color)
+	drawLine(layer, fv, base, color, width)
       }
 
       const drawText = function(layer, content, position, color, size) {
@@ -2612,6 +2696,7 @@
 	].includes(e.key)) {
 	  layers[MARKS].fillText(e.key, wState[PRINT_HEAD_LOCATION].x, wState[PRINT_HEAD_LOCATION].y)
 	  wState[PRINT_HEAD_LOCATION].x += wState[FONT_WIDTH]
+	  updateMarksHistory()
 	  drawTextCursor()
 	}
       }
@@ -2659,6 +2744,7 @@
       let keyIsDown = false
       let shiftIsDown = false
       let spaceIsDown = false
+      let controlIsDown = false 
 
       dom[SENSOR].addEventListener('mousedown', (e) => {
 	mouseIsDown = true
@@ -2939,6 +3025,7 @@
 	    if (constraint === COMMITTED) {
 	      wState[TOOL] = COMMITTED
 	    }
+	    controlIsDown = true
 	  }
 	  break
 	case 'Shift':
@@ -3061,6 +3148,7 @@
 	    }
 	    constraint = NONE
 	  }
+	  controlIsDown = false
 	  break
 	case '`':
 	case '0':
@@ -3090,6 +3178,19 @@
 	    dom[MARKS].style.zIndex = "6";
 	  }
 	  break
+	case 'z':
+	case 'Z':
+	  if (!isTyping && controlIsDown && historyIndex > 0) {
+	    historyIndex -= 1
+	    setImage(MARKS, marksHistory[historyIndex])
+	  }
+	  break
+	case 'y':
+	case 'Y':
+	  if (!isTyping && controlIsDown && historyIndex < marksHistory.length - 1) {
+	    historyIndex += 1
+	    setImage(MARKS, marksHistory[historyIndex])
+	  }
 	case 'v':
 	case 'V':
 	  if (!isTyping) {
@@ -3112,6 +3213,8 @@
       let isTyping = false
       let constraint = NONE
       let storedFunctions = []
+      let marksHistory = [dom[MARKS].toDataURL('image/png')]
+      let historyIndex = 0
       let currentMouse
 
       const query = parseQueryString(window.location.href)
